[project]
name = "wtlayout"
description = "Creates Windows Terminal tabs from a given layout"
version = "0.0.1"

requires-python = ">= 3.11"

dependencies = [
    "mslex ~= 1.3.0",
]

[project.scripts]
wtlayout = "wtlayout.app:main"

[project.optional-dependencies]
dev = [
    "ruff == 0.3.7"
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
]

[tool.ruff]
line-length = 96
lint.extend-select = ["ANN001", "ANN201", "ANN202"]
